add button functions

--- a/src/app/dataviewer/dataviewer.component.html
+++ b/src/app/dataviewer/dataviewer.component.html
@@ -34,9 +34,9 @@
     <td>{{item.stage}}</td>
     <td>{{item.lastupdate}}</td>
     <td>
-      <button class="doc" (click)="add()"></button>
-      <button class="edit"></button>
-      <button class="delete"></button>
+      <button class="doc" (click)="add(i)">A</button>
+      <button class="edit" (click)="edit(i)">E</button>
+      <button class="delete" (click)="remove(i)">D</button>
     </td>
     <td>94</td>
   </tr>
